# Scm

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFlatBuffers.cmake
include/: AsioModel.h  AsyncIoServiceDevice.h  Buffer.h  Callstack.h  CommonCommunicationDevice.h  CommonNotifyQueue.h  ControlMessage.h  DList.h  DListNode.h  Device.h  Disposable.h  InetFile.h  IniFile.h  Monitor.h  NotifyQueue.h  Polynomial.h  Sem.h  SerialPort.h  Shm.h  SpinLock.h  Strand.h  Strand.inl  StructuredMessage.h  TcpClient.h  TcpServer.h  TcpSession.h  TcpSessionContainer.h  TcpStructuredMessageClient.h  TcpStructuredMessageServer.h  TcpStructuredMessageSession.h  TcpStructuredMessageSessionContainer.h  Tmr.h  Tty.h  UdpClient.h  UdpServer.h  Utils.h  WorkQueue.h  cppstd.h  protocol_generated.h  protocol_generated_win.h
schema/: person.fbs  protocol.fbs
src/: CMakeLists.txt
src/core/: Buffer.cpp  CMakeLists.txt  Device.cpp  Polynomial.cpp  SerialPort.cpp  Strand.cpp  StructuredMessage.cpp  TcpClient.cpp  TcpServer.cpp  TcpSession.cpp  TcpSessionContainer.cpp  TcpStructuredMessageClient.cpp  TcpStructuredMessageServer.cpp  TcpStructuredMessageSession.cpp  TcpStructuredMessageSessionContainer.cpp  TestStructuredMessageClient.cpp  TestStructuredMessageServer.cpp  UdpClient.cpp  UdpServer.cpp  WorkQueue.cpp
src/osinf/: CMakeLists.txt  InetFile.cpp  IniFile.cpp  Sem.cpp  Shm.cpp  TestOsinf.cpp  Tmr.cpp  Tty.cpp
src/utils/: CMakeLists.txt  DList.cpp  SpinLock.cpp  TestUtils.cpp  Utils.cpp
